Admin Panel Eklendi

--- a/Views/Shared/Components/_PortfolioComponentPartial/Default.cshtml
+++ b/Views/Shared/Components/_PortfolioComponentPartial/Default.cshtml
@@ -98,9 +98,9 @@
                         <i class="im im-link"></i>
                     </a>
 
-                    <span class="item-folio__caption">
+                    <div class="item-folio__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                    </span>
+                    </div>
 
                 </div> <!-- end item-folio -->
             </div> <!-- end masonry__brick -->
@@ -129,9 +129,9 @@
                         <i class="im im-link"></i>
                     </a>
 
-                    <span class="item-folio__caption">
+                    <div class="item-folio__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                    </span>
+                    </div>
 
                 </div> <!-- end item-folio -->
             </div> <!-- end masonry__brick -->
@@ -160,9 +160,9 @@
                         <i class="im im-link"></i>
                     </a>
 
-                    <span class="item-folio__caption">
+                    <div class="item-folio__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                    </span>
+                    </div>
 
                 </div> <!-- end item-folio -->
             </div> <!-- end masonry__brick -->
@@ -191,9 +191,9 @@
                         <i class="im im-link"></i>
                     </a>
 
-                    <span class="item-folio__caption">
+                    <div class="item-folio__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                    </span>
+                    </div>
 
                 </div> <!-- end item-folio -->
             </div> <!-- end masonry__brick -->
@@ -222,9 +222,9 @@
                         <i class="im im-link"></i>
                     </a>
 
-                    <span class="item-folio__caption">
+                    <div class="item-folio__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                    </span>
+                    </div>
 
                 </div> <!-- end item-folio -->
             </div> <!-- end masonry__brick -->
@@ -253,9 +253,9 @@
                         <i class="im im-link"></i>
                     </a>
 
-                    <span class="item-folio__caption">
+                    <div class="item-folio__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                    </span>
+                    </div>
 
                 </div> <!-- end item-folio -->
             </div> <!-- end masonry__brick -->
