--- a/Views/Shared/Components/_TestimonialComponentPartial/Default.cshtml
+++ b/Views/Shared/Components/_TestimonialComponentPartial/Default.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="s-testimonials">
+﻿<section id="testimonial">
+<div class="s-testimonials">
 
     <div class="overlay"></div>
 
@@ -53,3 +54,4 @@
     </div> <!-- end testimonials -->
 
 </div>
+</section>
