--- a/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
+++ b/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
@@ -73,26 +73,28 @@
 					</ul>
 				</li>
 				<li class="nav-item dropdown">
-					<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="~/Ready-Bootstrap-Dashboard-master/assets/img/profile.jpg" alt="user-img" width="36" class="img-circle"><span>Admin</span></span> </a>
+					<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="~/Ready-Bootstrap-Dashboard-master/assets/img/profile.jpg" alt="user-img" width="36" class="img-circle"><span>Admin</span></a>
 					<ul class="dropdown-menu dropdown-user">
 						<li>
 							<div class="user-box">
-								<div class="u-img"><img src="~/Ready-Bootstrap-Dashboard-master/assets/img/profile.jpg" alt="user"></div>
+								<div class="u-img"><img src="@Url.Content("~/Ready-Bootstrap-Dashboard-master/assets/img/profile.jpg")" alt="user"></div>
 								<div class="u-text">
 									<h4>Admin</h4>
-									<p class="text-muted">hello@themekita.com</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">Profili Gör</a>
+									<p class="text-muted">hello@themekita.com</p>
+									<a href="profile.html" class="btn btn-rounded btn-danger btn-sm">Profili Gör</a>
 								</div>
 							</div>
 						</li>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#"><i class="ti-user"></i>Profilim</a>
-						<a class="dropdown-item" href="#"></i> Siteye Git</a>
-						<a class="dropdown-item" href="#"><i class="ti-email"></i> Gelen Mesajlar</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#"><i class="ti-settings"></i> Şifre Değiştir</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Çıkış Yap</a>
+						<li class="dropdown-divider"></li>
+						<li><a class="dropdown-item" href="#"><i class="ti-user"></i> Profilim</a></li>
+						<li><a class="dropdown-item" href="#"><i class="ti-world"></i> Siteye Git</a></li>
+						<li><a class="dropdown-item" href="#"><i class="ti-email"></i> Gelen Mesajlar</a></li>
+						<li class="dropdown-divider"></li>
+						<li><a class="dropdown-item" href="#"><i class="ti-settings"></i> Şifre Değiştir</a></li>
+						<li class="dropdown-divider"></li>
+						<li><a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Çıkış Yap</a></li>
 					</ul>
+
 					<!-- /.dropdown-user -->
 				</li>
 			</ul>
