--- a/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -2,12 +2,12 @@
 	<div class="scrollbar-inner sidebar-wrapper">
 		<div class="user">
 			<div class="photo">
-				<img src="~/Ready-Bootstrap-Dashboard-master/assets/img/profile.jpg">
+				<img src="https://images.pexels.com/photos/31559016/pexels-photo-31559016/free-photo-of-gun-batiminda-okyanus-kenarinda-gezinen-romantik-cift.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
 			</div>
 			<div class="info">
 				<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
 					<span>
-						Murat Yücedağ
+						Belinay Dinlemez
 						<span class="user-level">Admin</span>
 						<span class="caret"></span>
 					</span>
@@ -37,19 +37,13 @@
 		</div>
 		<ul class="nav">
 			<li class="nav-item">
-				<a href="index.html">
-					<i class="la la-dashboard"></i>
-					<p>Dashboard</p>
-				</a>
-			</li>
-			<li class="nav-item">
 				<a href="/Default/Index/">
 					<i class="la la-home"></i>
 					<p>Siteye Git</p>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="components.html">
+				<a href="/About/AboutList/">
 					<i class="la la-table"></i>
 					<p>Hakkımda</p>
 				</a>
@@ -62,46 +56,35 @@
 			</li>
 			<li class="nav-item">
 				<a href="/Experience/ExperienceList/">
-					<i class="la la-apple"></i>
+					<i class="la la-briefcase"></i>
 					<p>Deneyimler</p>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="tables.html">
-					<i class="la la-th"></i>
-					<p>Öne Çıkan Alan</p>
-				</a>
-			</li>
-			<li class="nav-item">
-				<a href="notifications.html">
-					<i class="la la-bell"></i>
+				<a href="/Contact/ContactList/">
+					<i class="la la-phone"></i>
 					<p>İletişim Bilgileri</p>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="typography.html">
-					<i class="la la-font"></i>
+				<a href="/Portfolio/PortfolioList/">
+					<i class="la la-folder-open"></i>
 					<p>Portfolyo</p>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
-					<i class="la la-fonticons"></i>
+				<a href="/Skill/SkillList/">
+					<i class="la la-lightbulb-o"></i>
 					<p>Yeteneklerim</p>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
-					<i class="la la-fonticons"></i>
+				<a href="/Testimonial/TestimonialList/">
+					<i class="la la-users"></i>
 					<p>Referanslarım</p>
 				</a>
 			</li>
-			<li class="nav-item">
-				<a href="icons.html">
-					<i class="la la-fonticons"></i>
-					<p>Sosyal Medya</p>
-				</a>
-			</li>
+
 			<li class="nav-item">
 				<a href="/Message/Inbox/">
 					<i class="la la-envelope-o"></i>
@@ -116,7 +99,7 @@
 			</li>
 			<li class="nav-item">
 				<a href="icons.html">
-					<i class="la la-fonticons"></i>
+					<i class=" la la-sign-out"></i>
 					<p>Çıkış Yap</p>
 				</a>
 			</li>
